# nyaagrab

./: .gitattributes  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.workspace.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  desktop-api.ts  mascot.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
scripts/: with-rust-bin.mjs
